tests/ingress_tls_test.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ingress-tls-test-secret
  namespace: default
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREVENDQWZXZ0F3SUJBZ0lVYzBJbUpqMEJ5d1NaUmJtVU5oNmFlOGN2OHNNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xabTl2TG1KaGNpNWpiMjB3SGhjTk1qRXdOekE0TURVeU16QXlXaGNOTWpJdwpOekE0TURVeU16QXlXakFXTVJRd0VnWURWUVFEREF0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOSXAySkNNMHFJRGNTZ3VTTDlJWndoOCs0MWp2akZBQkJtcnBnZDUKNU5kTDNITG0wZVEvTHdoZzVwa3pnSnJzdHR2cS8zSmlhRXNnZ3drNklKNUY5b1lsb2FxUTd3alBZUzlyOFdzYwprSXZFcHU3RzBwN01yW [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRFNLZGlRak5LaUEzRW8KTGtpL1NHY0lmUHVOWTc0eFFBUVpxNllIZWVUWFM5eHk1dEhrUHk4SVlPYVpNNENhN0xiYjZ2OXlZbWhMSUlNSgpPaUNlUmZhR0phR3FrTzhJejJFdmEvRnJISkNMeEtidXh0S2V6SzJSa3hPZGlyazhrUWhxWmwyM0xxeGxDaWJlCnhKeVJ1SlJWa0tmKzRKcWRMaGRmL1U4Wm1CVlZhRldTbjRFUklWMHFYT28yblB1MzcwMmZDN0lrTlJSdXhYZ1QKakRxWDlTZHoyNmFld3Awb1ZJR205aGVvVDg5bS8rdEIwSjNPcTI2ZllJMTl2czJWQzhPd1RwODJWajNsUmZEMAp4WHkrdG5uVVdBRGpRO [...]
type: kubernetes.io/tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  # - secretName: ingress-tls-test-secret
  rules:
  - http:
      paths:
      - path: /ingress-tls-test
        pathType: Prefix
        backend:
          service:
            name: ingress-tls-test-nginx
            port:
              number: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-tls-test-nginx
spec:
  selector:
    matchLabels:
      run: ingress-tls-test-nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: ingress-tls-test-nginx
    spec:
      containers:
      - name: ingress-tls-test-nginx
        image: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-tls-test-nginx
  labels:
    run: ingress-tls-test-nginx
spec:
  type: NodePort
  ports:
  - port: 30080
    targetPort: 80
    protocol: TCP
    name: http
  - port: 30081
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    run: ingress-tls-test-nginx
