tests/k8s_dashboard_on_ingress.yaml
apiVersion: v1
kind: Secret
metadata:
  name: k8s-dashboard-ingress-tls-secret
  namespace: k8s-dashboard
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lVSjZmZ3dudHlkWXVHUTc1VDdVbXVxN3dtYUxNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hURWJNQmtHQTFVRUF3d1NjMlZqZFhKbExXbHVaM0psYzNNdVkyOXRNQjRYRFRJeE1EY3hOREl6TkRRMQpPVm9YRFRJeU1EY3hOREl6TkRRMU9Wb3dIVEViTUJrR0ExVUVBd3dTYzJWamRYSmxMV2x1WjNKbGMzTXVZMjl0Ck1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdnhxVThCaVh1ZExhQmtEUC9kRkkKc0pmUHJZeWo5cmplZ2MydUJyOGpISTV5YXhqaHp6V2tmbHZ0OERJK2xyd1ZCanlyd01hbjRMZ1lmZFR5WHNQaQpYdGpmNWxKVW02WDkxY [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQy9HcFR3R0plNTB0b0cKUU0vOTBVaXdsOCt0aktQMnVONkJ6YTRHdnlNY2puSnJHT0hQTmFSK1crM3dNajZXdkJVR1BLdkF4cWZndUJoOQoxUEpldytKZTJOL21VbFNicGYzVnZaeW9XOUsxT3ZYejlWRG1ac244OFk4NU5lUFAySzNPdFdFQUZKc0ZwUkFqCnBxMFBFbUlySGNOMk1PZHBOQTFkTDEvYTN3WGVtTXRHdDZNZnU1WVF2N1ZOeXQweEFIT3ZSYmJxSnhCNzFlOUYKc1JmUFV2SWViOWprbytWRXRwK3B4OUw4VFBnZHIxTkJyNnBkcWgzUjRrVjNhVlQ5RVpvNzRyVVF0V2FQVkdUUgp0YlgyZW5kZkRzbFBWQ [...]
type: kubernetes.io/tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: k8s-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
      - secure-ingress.com
    secretName: k8s-dashboard-ingress-tls-secret
  rules:
  - host: secure-ingress.com
    http:
      paths:
      - path: /dashboard(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: k8s-dashboard-kubernetes-dashboard
            port:
              number: 443
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: k8s-dashboard-admin
  namespace: k8s-dashboard
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: k8s-dashboard-admin
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-admin
subjects:
- kind: ServiceAccount
  name: k8s-dashboard-admin
  namespace: k8s-dashboard

# helm repo add kubernetes-dashboard https://kubernetes.github.io/dashboard/
# kubectl create ns k8s-dashboard
# helm install -n k8s-dashboard k8s-dashboard kubernetes-dashboard/kubernetes-dashboard

# Access: https://192.168.56.201:32001/dashboard/   ★最後の/を忘れずに
# Tokenの取得: kubectl -n k8s-dashboard get secret $(kubectl -n k8s-dashboard get sa/k8s-dashboard-admin -o jsonpath="{.secrets[0].name}") -o go-template="{{.data.token | base64decode}}"

# SSL
# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=foo.bar.com"
# cat tls.crt | base64 | tr -d "\n"
# cat tls.key | base64 | tr -d "\n"
# ★/etc/hostsに、`192.168.56.201 secure-ingress.com` を追加すること
# curl -kv https://secure-ingress.com:32001/dashboard/ --resolve secure-ingress:32001:192.168.56.201
